--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "test": "jest --config jest.config.ts"
+    "test": "jest --config jest.config.ts",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -46,6 +48,7 @@
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-vue": "^9.32.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-expect-message": "^1.1.3",
     "sass": "^1.79.3",
