--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@jest/globals": "^29.7.0",
     "@primevue/themes": "^4.0.7",
     "blob-stream": "^0.1.3",
-    "browserify": "^17.0.0",
     "fontkit": "^2.0.4",
     "highlight.js": "^11.10.0",
     "mathjax": "^3.2.2",
@@ -27,27 +26,22 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
     "vue": "^3.5.8",
-    "vue-html-to-paper": "^2.0.3",
     "vue-i18n": "^10.0.5",
-    "vue-loader": "^17.4.2",
     "vue-mathjax-next": "0.0.6",
     "vue-router": "^4.4.5",
-    "vue-tabs-with-active-line": "^1.2.6",
-    "vue3-tabs": "^0.1.12",
-    "webpack": "^5.94.0"
+    "vue3-tabs": "^0.1.12"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-vue": "^5.2.0",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-airbnb": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.57.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-vue": "^9.32.0",
-    "file-loader": "^6.2.0",
     "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-expect-message": "^1.1.3",
@@ -55,8 +49,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "url-loader": "^4.1.1",
-    "vite": "^6.0.6"
+    "vite": "^6.1.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
